--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.1.0-mc1.20+
+mod_version=1.1.0-mc1.20.4
 maven_group=com.nettakrim
 archives_base_name=signed_paintings
 
