--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.2
-loader_version=0.15.11
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.7
 
 # Mod Properties
-mod_version=1.1.1-mc1.21
+mod_version=1.1.1-mc1.21.2+
 maven_group=com.nettakrim
 archives_base_name=signed_paintings
 
 # Dependencies
-fabric_version=0.100.3+1.21
+fabric_version=0.107.0+1.21.3
