--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.21.3+build.2
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=1.1.1-mc1.21.2+
+mod_version=1.1.1-mc1.21.2+brigher
 maven_group=com.nettakrim
 archives_base_name=signed_paintings
 
